# colemen_encrypt

./: Cargo.toml  LICENSE  README.md
documentation/: 01-quick-start.md  02-cli-reference.md  03-recipes.md  04-safety-model.md  05-file-format.md  06-machine-responses.md  07-output-paths-and-naming.md  08-verification-and-recovery.md  09-colemen-py-integration.md  10-troubleshooting.md  README.md
documentation/examples/: sample-commands.ps1  sample-commands.sh  targets.txt
src/: main.rs
