[package]
name = "colemen_encrypt"
version = "0.1.0"
edition = "2021"
authors = ["Colemen Atwood"]
license = "MIT"
description = "A conservative, authenticated, password-based file encryption/decryption CLI with machine-readable reporting."
repository = ""

[dependencies]
aes-gcm-siv = "0.11"
anyhow = "1.0"
argon2 = "0.5"
clap = { version = "4.5", features = ["derive"] }
filetime = "0.2"
hex = "0.4"
rand = "0.8"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
walkdir = "2.5"
zeroize = "1.8"
